...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="64dp"
...
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/logout_description"
            android:src="@drawable/ic_map"
            app:tint="@color/white"/>

        <ImageView
            android:id="@+id/action_logout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/logout_description"
            android:src="@drawable/ic_logout"
            app:tint="@color/white"/>
...
